--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
