--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@tanstack/react-query-devtools": "^4.32.5",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.14.2",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
