--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "react-leaflet": "^4.2.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.14.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
