--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^4.32.5",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.0",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
