--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
@@ -34,6 +36,7 @@
     "@types/js-cookie": "^3.0.3",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^18.2.15",
+    "@types/react-avatar-editor": "^13.0.0",
     "@types/react-dom": "^18.2.7",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
